@@ -456,7 +456,7 @@
 	mov_imm vmvn 0x0077ffff .i32
 	mov_imm vmov 0x77 .i8
 	mov_imm vmov 0xff0000ff000000ff .i64
-	mov_imm vmov 0x40880000 .f32
+	mov_imm vmov 4.25 .f32
 
 	mov_imm vmov 0xa5a5 .i16
 	mov_imm vmvn 0xa5a5 .i16
