@@ -9,7 +9,7 @@ func:
         vmov\cond\f32 s0,s1
         vmov\cond\f64 d0,d1
         vmov\cond\f32 s0,#0.25
-        vmov\cond\f64 d0,#1
+        vmov\cond\f64 d0,#1.0
 	itblock 4 \cond
         vmov\cond r0,s1
         vmov\cond s0,r1
