@@ -1,3 +1,9 @@
+2007-03-26  Julian Brown  <julian@codesourcery.com>
+
+	* gas/arm/neon-const.s: Use FP syntax for 0/-0.
+	* gas/arm/vfp-neon-syntax-inc.s: Likewise, for 1.
+	* gas/arm/neon-cov.s: Use float syntax for FP immediate.
+
 2007-03-24  Paul Brook  <paul@codesourcery.com>
 	Mark Shinwell  <shinwell@codesourcery.com>
 
